--- a/templates/form.html
+++ b/templates/form.html
@@ -1,7 +1,25 @@
-<form method="POST" name="email_form_with_php"
-      action="/upload" enctype="multipart/form-data">
-  <label for='uploaded_file'> Хэй, красавчик, грузани фоточку :</label>
-  <input type="file" name="uploaded_file" id="uploaded_file" >
-  <input type="submit" value="Submit" name='submit'>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href='{{ url_for("static", filename="style.css") }}'>
+    <title>Document</title>
+</head>
+<body>
+    <div class=modal>
+        <form method="POST" action="/upload" enctype="multipart/form-data">
+            <div class="up-left">
+                <img class="main" src="https://i.pinimg.com/736x/63/3e/de/633ede94e0f3826cb1da23b6133b704d.jpg" >
+            </div>
+            <div class="up-right">
+                <label for='uploaded_file'> Хэй, красавчик, грузани фоточку :</label>
 
-</form>
+                <input type="file" name="uploaded_file" id="uploaded_file" >
+                <div class="bottom">
+                    <input type="submit" value="Submit" name='submit'>
+                </div>
+            </div>
+        </form>
+    </div>
+</body>
+</html>
