better score and giving an image back

--- a/templates/result.html
+++ b/templates/result.html
@@ -12,6 +12,7 @@
                 <img class="main" src="https://i.pinimg.com/736x/63/3e/de/633ede94e0f3826cb1da23b6133b704d.jpg">
             </div>
             <div class="up-right">
+                <img src="{{ url }}" class="returned" width="250">
                 <h3> Я думаю что на картинке: {{text}}</h3>
             </div>
         </form>
