--- a/templates/result.html
+++ b/templates/result.html
@@ -17,6 +17,7 @@
                 {% for i in range(len) %}
                     <img  src="{{ mas[i] }}" width="100" height="100">
                     <h2>{{emotions[i]}}</h2>
+                    <h2>{{ ages[i] }} лет</h2>
                 {% endfor %}
             </div>
         </form>
